Modularization, remove Launcher.java, use jlink goal.